@@ -11,6 +11,7 @@ PHP                                                                        NEWS
   in HTTP uploads). (Ilia)
 - Fixed bug #47409 (extract() problem with array containing word "this").
   (Ilia, chrisstocktonaz at gmail dot com)
+- Fixed bug #44827 (define() allows :: in constant names). (Ilia)
 
 
 ?? ??? 20??, PHP 5.3.2
